--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Introduction to low Level R.html
 Introduction to low Level R_files
 louis_drogo.html
 louis_drogo_files
+Main doc.html
+Main doc_files
